fixed docstrings, added manual

--- a/00_Model_Eval_Vis.ipynb
+++ b/00_Model_Eval_Vis.ipynb
@@ -6,7 +6,8 @@
     "tags": []
    },
    "source": [
-    "# Model performance evaluation and visualization"
+    "# Model performance evaluation and visualization\n",
+    "Authors: Katrin Wernicke, code adapted from Alexey Bogatyrev"
    ]
   },
   {
@@ -97,7 +98,7 @@
    "outputs": [],
    "source": [
     "# Define global variables\n",
-    "DIRECTORY = 'E:/W_Katrin/AOI_2_Vegas/AOI_2_Vegas_Train/tiles'"
+    "DIRECTORY = 'H:/DL_BuildingDetection/1_TrainingData/tiles'"
    ]
   },
   {
@@ -118,7 +119,7 @@
    "outputs": [],
    "source": [
     "#Load model\n",
-    "model = keras.models.load_model(\"E:/W_Katrin/InnovationLab/models/17_model\")"
+    "model = keras.models.load_model(\"H:/DL_BuildingDetection/1_ModelEngineering/models/0_model\")"
    ]
   },
   {
