--- a/00_PreparingTrainingData_Tiling_Transforming_Format_Jonas.ipynb
+++ b/00_PreparingTrainingData_Tiling_Transforming_Format_Jonas.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "346d4cd2-9b40-4aeb-882e-948c1a417f71",
+   "metadata": {},
+   "source": [
+    "# Preparing Training Data\n",
+    "Author: Jonas Knecht"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e0015fc2-aa19-4c8b-9d11-e0cdcc7016cb",
    "metadata": {},
    "source": [
