--- a/01_Model_Engineering.ipynb
+++ b/01_Model_Engineering.ipynb
@@ -6,7 +6,8 @@
     "tags": []
    },
    "source": [
-    "#  SpaceNet U-Net (adapted)"
+    "#  SpaceNet U-Net (adapted)\n",
+    "Authors:  Alexey Bogatyrev (main), Katrin Wernicke (small edits)"
    ]
   },
   {
@@ -105,7 +106,7 @@
    "outputs": [],
    "source": [
     "# Define global variables\n",
-    "DIRECTORY = 'E:/W_Katrin/AOI_2_Vegas/AOI_2_Vegas_Train/tiles'"
+    "DIRECTORY = 'H:/DL_BuildingDetection/1_TrainingData/tiles'"
    ]
   },
   {
@@ -294,10 +295,10 @@
     "    Real-time data augmentation can be included.\n",
     "    \n",
     "        Parameters: \n",
-    "            df_files: Pandas dataframe, with columns 'img' and 'mask', containing file paths \n",
-    "            target_size: A tuple containing two int numbers, describing desired spatial dimension of training data \n",
-    "            batch_size: Int number \n",
-    "            seed: Int number\n",
+    "            df_files (DataFrame): Pandas dataframe, with columns 'img' and 'mask', containing file paths \n",
+    "            target_size (tuple): A tuple containing two int numbers, describing desired spatial dimension of training data \n",
+    "            batch_size (int): Int number \n",
+    "            seed (int): Int number\n",
     "        \n",
     "        Returns: \n",
     "        Two generators (zipped), one for the satellite imagery and for the building masks\n",
@@ -337,10 +338,10 @@
     "    Also: The values of the mask tiles are rescaled.\n",
     "    \n",
     "        Parameters: \n",
-    "            df_files: Pandas dataframe, with columns 'img' and 'mask', containing file paths \n",
-    "            target_size: A tuple containing two int numbers, describing desired spatial dimension of training data \n",
-    "            batch_size: Int number \n",
-    "            seed: Int number\n",
+    "            df_files (DataFrame): Pandas dataframe, with columns 'img' and 'mask', containing file paths \n",
+    "            target_size (tuple): A tuple containing two int numbers, describing desired spatial dimension of training data \n",
+    "            batch_size (int): Int number \n",
+    "            seed (int): Int number\n",
     "        \n",
     "        Returns: \n",
     "        Two generators, image_generator and modified mask_generator\n",
@@ -468,7 +469,7 @@
     "    one classes are summed in the final layer before activation.\"\n",
     "    \n",
     "        Parameters: \n",
-    "            n_classes: number of desired classes in the final semantic segmentation map\n",
+    "            n_classes (int): number of desired classes in the final semantic segmentation map\n",
     "        \n",
     "        Returns: \n",
     "            Feature Map with three Feature Channels  \n",
@@ -506,8 +507,8 @@
     "    Carries out a 3x3 Convolution, then a Batch Normalization and a Rectified Linear Unit activation function (ReLU).\n",
     "    \n",
     "        Parameters: \n",
-    "            n_filter: amount of filters used during convolution, also: desired amount of feature channels after convolution \n",
-    "            batch_norm: if True, a Batch Normalization will be performed after the convolution and before the ReLU\n",
+    "            n_filter (int): amount of filters used during convolution, also: desired amount of feature channels after convolution \n",
+    "            batch_norm (bool): if True, a Batch Normalization will be performed after the convolution and before the ReLU\n",
     "        \n",
     "        Returns: \n",
     "            batch of functions\n",
@@ -531,9 +532,9 @@
     "    As one Encoder-block in the U-net consists of two consecutive convolutions, this function summarizes these double convolutions here. \n",
     "    \n",
     "        Parameters: \n",
-    "            n_filter: amount of filters used during convolution, also: desired amount of feature channels after convolution \n",
-    "            double_conv: if True, two conv_blocks will be executed\n",
-    "            batch_norm: if True, a Batch Normalization will be performed after the convolution and before the ReLU\n",
+    "            n_filter (int): amount of filters used during convolution, also: desired amount of feature channels after convolution \n",
+    "            double_conv (bool): if True, two conv_blocks will be executed\n",
+    "            batch_norm (bool): if True, a Batch Normalization will be performed after the convolution and before the ReLU\n",
     "        \n",
     "        Returns: Double or single convolution blocks \n",
     "    '''\n",
@@ -555,8 +556,8 @@
     "    Layers will be upsampled by a transposed convolution function or a simple upsamling function.\n",
     "    \n",
     "        Parameters: \n",
-    "            n_filter: amount of filters used during deconvolution\n",
-    "            deconv: if True, the layers will be upsampled by a transposed convolution\n",
+    "            n_filter (int): amount of filters used during deconvolution\n",
+    "            deconv (bool): if True, the layers will be upsampled by a transposed convolution\n",
     "        \n",
     "        Returns: \n",
     "            Deconvolution block\n",
@@ -581,14 +582,14 @@
     "    This function builds the U-Net model by incorporating the former build functions. \n",
     "    \n",
     "        Parameters: \n",
-    "            n_classes: number of classes for the desired segmentation map \n",
-    "            image_shape: desired output shape\n",
-    "            feature_scale: \n",
-    "            deconv: if True, a transposed convolution will be used for Upsampling\n",
-    "            double_conv: if True, two consecutive conv_blocks will be executed\n",
-    "            batch_norm: if True, within a conv_block, a Batch Normalization will be performed after the convolution and before the ReLU\n",
-    "            final_reduce: if True, reduce_layer is applied\n",
-    "            final_reduce_n_channel: final_reduce_n_channel must be devisible by n_classes\n",
+    "            n_classes (int): number of classes for the desired segmentation map \n",
+    "            image_shape (tuple): desired output shape\n",
+    "            feature_scale (int): \n",
+    "            deconv (bool): if True, a transposed convolution will be used for Upsampling\n",
+    "            double_conv (bool): if True, two consecutive conv_blocks will be executed\n",
+    "            batch_norm (bool): if True, within a conv_block, a Batch Normalization will be performed after the convolution and before the ReLU\n",
+    "            final_reduce (bool): if True, reduce_layer is applied\n",
+    "            final_reduce_n_channel (int): final_reduce_n_channel must be devisible by n_classes\n",
     "            \n",
     "        Returns: \n",
     "            U-Net model\n",
@@ -643,31 +644,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "RkFAr-r9Zx-F"
    },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 47)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m<tokenize>:47\u001b[1;36m\u001b[0m\n\u001b[1;33m    metrics = ['loss', 'sparse_categorical_accuracy'] # training metrics I want to plot (y-axis - names)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def validate_image(img,mask,model):\n",
     "    '''\n",
     "    This functions helps to visually assess the accuracy of the trained model. \n",
     "     \n",
     "        Parameters: \n",
-    "            img: use make_gen4unet() to generate a img example\n",
-    "            mask: use make_gen4unet() to generate a mask example\n",
-    "            model: trained model\n",
+    "            img (array): use make_gen4unet() to generate a img example\n",
+    "            mask (array): use make_gen4unet() to generate a mask example\n",
+    "            model (tf.model): trained model\n",
     "        Returns: \n",
     "            validation plot\n",
     "            predicted mask \n",
@@ -701,7 +693,7 @@
     "    Can also be visualized by using Tensorboard.\n",
     "     \n",
     "        Parameters: \n",
-    "            history_dict: a history object. Its history_dict.history attribute is a reord of training loss values and metrics values at successive epochs, \n",
+    "            history_dict (history object): a history object. Its history_dict.history attribute is a reord of training loss values and metrics values at successive epochs, \n",
     "                          as well as validation loss values and validation metrics values.\n",
     "        \n",
     "        Returns: \n",
@@ -722,36 +714,6 @@
     "        plt.ylabel(metric)\n",
     "        plt.legend()\n",
     "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 51
-    },
-    "colab_type": "code",
-    "executionInfo": {
-     "elapsed": 117054,
-     "status": "ok",
-     "timestamp": 1576418958092,
-     "user": {
-      "displayName": "Alexey Bogatyrev",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AAuE7mBa1HUZ-Dpqp0UZUzPKEK8RbgE5cjI-9NUEk7eJvw=s64",
-      "userId": "00927345804170279717"
-     },
-     "user_tz": -180
-    },
-    "id": "JyMSmzSXQwH5",
-    "outputId": "dc856a53-9c73-475e-b7c4-813a1f6189da"
-   },
-   "source": [
-    "#DELETE?\n",
-    "\n",
-    "val_image_gen   = make_gen4unet(df_val,batch_size=1,seed=12)\n",
-    "\n",
-    "img_val,mask_val = next(val_image_gen)"
    ]
   },
   {
@@ -820,7 +782,7 @@
    "source": [
     "%%time\n",
     "# adapt logdir folder every time running the model to save event files in right folder\n",
-    "logdir = 'log_dir/improved/0'\n",
+    "logdir = 'H:/DL_BuildingDetection/1_ModelEngineering/log_dir/0'\n",
     "os.makedirs(logdir,exist_ok=True)\n",
     "\n",
     "\n",
@@ -855,7 +817,7 @@
    "source": [
     "# Save / Load the model with weights\n",
     "\n",
-    "model.save(\"0_model\")\n",
+    "model.save(\"H:/DL_BuildingDetection/1_ModelEngineering/models/0_model\")\n",
     "#model = keras.models.load_model(\"0_model\")\n",
     "#model.summary()"
    ]
