--- a/02_Tiling_Predicting_Mosaicing.ipynb
+++ b/02_Tiling_Predicting_Mosaicing.ipynb
@@ -5,7 +5,8 @@
    "id": "e3fade1f-3bfa-4a6a-a1cf-30271cecc2a6",
    "metadata": {},
    "source": [
-    "# Tiling - Predicting - Mosaicing"
+    "# Tiling - Predicting - Mosaicing\n",
+    "Authors: Katrin Wernicke, Jonas Knecht"
    ]
   },
   {
@@ -25,7 +26,7 @@
    "id": "6cb6798c-1ea6-4dbd-a347-01b1c4af17d6",
    "metadata": {},
    "source": [
-    "![title](E:/W_Katrin/InnovationLab/Workflow.png)"
+    "![title](Workflow.png)"
    ]
   },
   {
@@ -82,7 +83,7 @@
    ],
    "source": [
     "os.getcwd()\n",
-    "os.chdir('E:/W_Katrin/InnovationLab/0_DL_BuildingDetection')\n",
+    "os.chdir('H:/0_DL_BuildingDetection')\n",
     "os.getcwd()"
    ]
   },
@@ -105,7 +106,7 @@
     "TILE_DIRECTORY = \"2_Kigali/Data/Raster\"\n",
     "IMG_RESOLUTION = {}\n",
     "POINT_FILE = {}\n",
-    "MODEL_PATH = \"E:/W_Katrin/InnovationLab/models/5_model_improved\""
+    "MODEL_PATH = \"H:/DL_BuildingDetection/1_ModelEngineering/models/0_model\""
    ]
   },
   {
@@ -151,27 +152,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a8593b19-3274-41c9-bef8-c7a316b45bce",
+   "execution_count": null,
+   "id": "e7aede9b-413b-4b00-ad04-c1c8770435d8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Point: POINT (173723.36172185623 9789230.701895246)\n",
-      "GeoDataFrame CRS: epsg:32736\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\site-packages\\geopandas\\io\\file.py:362: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  pd.Int64Index,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create Point \n",
     "point = Point(ulx, uly)\n",
@@ -374,7 +358,7 @@
     "file_path = ORIGINAL_IMG\n",
     "single_band = True # set single band true to calculate for each band a percentile. False --> calculate one percentiule for all bands \n",
     "percentile = (0.02,0.98) # set the percentile \n",
-    "output_path = r\"2_Kigali/Data/Raster/2015_Pleiades_Kigali_subset_Uint8.tif\"\n",
+    "output_path = r\"2_Kigali/Data/Raster/2015_Pleiades_Kigali_subset_.tif\"\n",
     "target_size = (0,255)\n",
     "bands = [0,1,2]\n",
     "\n",
@@ -438,7 +422,7 @@
    "outputs": [],
    "source": [
     "# run tiling\n",
-    "file_path = \"2_Kigali/Data/Raster/2015_Pleiades_Kigali_subset_Uint8.tif\"\n",
+    "file_path = \"2_Kigali/Data/Raster/2015_Pleiades_Kigali_subset_.tif\"\n",
     "\n",
     "warnings.simplefilter('ignore', Image.DecompressionBombWarning)\n",
     "\n",
